; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/bonding/extr_bond_main.c_bond_rr_gen_slave_id.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/bonding/extr_bond_main.c_bond_rr_gen_slave_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bonding = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, %struct.reciprocal_value }
%struct.reciprocal_value = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bonding*)* @bond_rr_gen_slave_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bond_rr_gen_slave_id(%struct.bonding* %0) #0 {
  %2 = alloca %struct.bonding*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.reciprocal_value, align 4
  %5 = alloca i32, align 4
  store %struct.bonding* %0, %struct.bonding** %2, align 8
  %6 = load %struct.bonding*, %struct.bonding** %2, align 8
  %7 = getelementptr inbounds %struct.bonding, %struct.bonding* %6, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  switch i32 %10, label %17 [
    i32 0, label %11
    i32 1, label %13
  ]

11:                                               ; preds = %1
  %12 = call i32 (...) @prandom_u32()
  store i32 %12, i32* %3, align 4
  br label %29

13:                                               ; preds = %1
  %14 = load %struct.bonding*, %struct.bonding** %2, align 8
  %15 = getelementptr inbounds %struct.bonding, %struct.bonding* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %3, align 4
  br label %29

17:                                               ; preds = %1
  %18 = load %struct.bonding*, %struct.bonding** %2, align 8
  %19 = getelementptr inbounds %struct.bonding, %struct.bonding* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = bitcast %struct.reciprocal_value* %4 to i8*
  %22 = bitcast %struct.reciprocal_value* %20 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %21, i8* align 4 %22, i64 4, i1 false)
  %23 = load %struct.bonding*, %struct.bonding** %2, align 8
  %24 = getelementptr inbounds %struct.bonding, %struct.bonding* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = getelementptr inbounds %struct.reciprocal_value, %struct.reciprocal_value* %4, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @reciprocal_divide(i32 %25, i32 %27)
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %17, %13, %11
  %30 = load %struct.bonding*, %struct.bonding** %2, align 8
  %31 = getelementptr inbounds %struct.bonding, %struct.bonding* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %31, align 4
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @prandom_u32(...) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @reciprocal_divide(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
